--- a/src/main/resources/templates/company/FindCandidates.html
+++ b/src/main/resources/templates/company/FindCandidates.html
@@ -14,13 +14,20 @@ T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             integrity="sha384-
 C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div th:switch="${candidates}" >
+<div th:switch="${candidates}">
     <h2 th:case="null">No candidates yet!</h2>
-    <div th:case="*">
+    <div th:case="*" style="width: 90%; margin-left: 5%">
         <h2>Candidates</h2>
+        <a href="/">&#8678; Back</a>
         <table class="table table-hover">
             <thead>
             <tr>
@@ -30,8 +37,8 @@ C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
                 <th>address</th>
                 <th>phone</th>
                 <th>email</th>
-                <th>Edit</th>
-                <th>Delete</th>
+                <th>More experiences</th>
+                <th>Send Email</th>
             </tr>
             </thead>
             <tbody>
@@ -39,15 +46,91 @@ C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
                 <td th:text="${candidate.id}"></td>
                 <td th:text="${candidate.fullName}"></td>
                 <td th:text="${candidate.dob}"></td>
-                <td th:text="${candidate.address}"></td>
+                <td th:text="${candidate.address.getCity()}"></td>
                 <td th:text="${candidate.phone}"></td>
                 <td th:text="${candidate.email}"></td>
-<!--                <td><a th:href="@{/edit/{id}(id=${candidate.id})}">Edit</a></td>-->
-<!--                <td><a th:href="@{/delete/{id}(id=${candidate.id})}">Delete</a></td>-->
+                <td>
+                    <button class="btn btn-default" th:onclick="'handleSeeMoreExperiences(' + ${candidate.id} + ')'">See</button>
+                </td>
+                <td>
+                    <button class="btn btn-default" th:onclick="">Send to</button>
+                </td>
             </tr>
             </tbody>
         </table>
     </div>
+    <div id="container"></div>
+
 </div>
+<script>
+    async function fetchGetExperiences(candidateId) {
+        const response = await fetch('/company/get-experiences?candidateId=' + candidateId)
+        if (!response.ok) {
+            return [];
+        }
+        const data = await response.json()
+        if (data) {
+            return data;
+        }
+        return [];
+    }
+    function closeModal(){
+        document.getElementById("container").innerHTML=""
+    }
+
+    async function handleSeeMoreExperiences(candidateId) {
+        const elementContainer = document.getElementById("container")
+        if (elementContainer) {
+            const experiences = await fetchGetExperiences(candidateId)
+            if (experiences) {
+
+                elementContainer.innerHTML = `
+                <!-- Modal -->
+                <div class="modal fade in" id="modalShowMoreExperience" role="dialog" style="display: block; padding-left: 17px;">
+                    <div class="modal-dialog  modal-lg">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title" style="flex: 1; text-align: center">More Experience</h4>
+                                <button type="button" class="close" data-dismiss="modal" onclick="closeModal()">&times;</button>
+
+                            </div>
+                            <div class="modal-body">
+                                <table style="width: 100%" class="table table-hover">
+                                    <tr>
+                                        <th>Company Name</th>
+                                        <th>Role</th>
+                                        <th>From Date</th>
+                                        <th>To Date</th>
+                                        <th>Word Description</th>
+                                    </tr>
+                                    <tbody>
+                                        ${experiences.map(exp => `
+                                            <tr>
+                                                <td>${exp.companyName}</td>
+                                                <td>${exp.role}</td>
+                                                <td>${exp.fromDate}</td>
+                                                <td>${exp.toDate}</td>
+                                                <td>${exp.workDescription}</td>
+                                            </tr>
+                                        `).join('')}
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" onclick="closeModal()">Close</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                `
+
+            }
+        }
+    }
+
+</script>
 </body>
 </html>
