add file report nd sqlworks

--- a/src/main/resources/templates/candidates/FindJob.html
+++ b/src/main/resources/templates/candidates/FindJob.html
@@ -33,7 +33,7 @@ C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     <div style="width: 90%; margin-left: 5%">
         <h2>Jobs</h2>
         <a href="/">&#8678; Back</a>
-        <table class="table table-hover" style="border: solid 2px #666666 ">
+        <table class="table table-hover">
             <tr>
                 <th rowspan="2">Company</th>
                 <th rowspan="2">Jobs</th>
